# kago-utils

./: .clang-format  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
data/: zihai_patterns.pickle
dev/bench/: data.js
kago_utils/: action.py  agari.py  agari_calculator.py  bot.py  game.py  generate_shanten_table.py  hai.py  hai_group.py  huuro.py  kawa.py  player.py  shanten.py  shanten_calculator.py  teban_action_resolver.py  tehai.py  tehai_decomposer.py  tsumoho_riichi_ankan_kakan_dahai_resolver.py  yama.py  zaichi.py
kago_utils/actions/: __init__.py  ankan.py  chii.py  dahai.py  daiminkan.py  kakan.py  kyuushu_kyuuhai.py  pon.py  riichi.py  ronho.py  skip.py  tsumoho.py  wait.py  waiting.py
kago_utils/ext/: _shanten.c  _shanten.pyi
kago_utils/resolvers/: __init__.py  chankan_action_resolver.py  non_teban_action_resolver.py  teban_action_resolver.py
kago_utils/visualizer/: __init__.py  visualizer.py
scripts/: generate_distance_table.py  generate_distance_tables.py
src/: hai.py  shanten.py
src/kago_utils/: generate_shanten_table.py  shanten.py
tests/: test_game.py  test_hai.py  test_hai_group.py  test_huuro.py  test_non_teban_action_resolver.py  test_player.py  test_shanten.py  test_shanten_calculator.py  test_teban_action_resolver.py  test_tehai.py  test_tehai_decomposer.py  test_tsumoho_riichi_ankan_kakan_dahai_resolver.py  test_yama.py
tests/actions/: test_ankan.py  test_chii.py  test_dahai.py  test_daiminkan.py  test_kakan.py  test_pon.py  test_ronho.py  (+4 more)
(+17 files in other folders)
